--- a/index.html
+++ b/index.html
@@ -2,12 +2,22 @@
 <html>
   <head>
     <title>The Farm Crap App</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <body onload="init(['scm/crap-app.jscm']);" bgcolor="#fff">
 
+      <div class="container">
+	<h1>Crap Calculator</h1>
+	<div class="row">
+	  <div class="col-xs-12 col-sm-8 offset-sm-2">
+	    <button>Manure Type</button>
+	  </div>
+	</div>
+      </div>
 
     </body>
     <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="js/ditto.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
 </html>
