--- a/index.html
+++ b/index.html
@@ -5,65 +5,75 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <body onload="init(['scm/crap-app.jscm']);" bgcolor="#fff">
-
+      
       <div class="container">
-	<h1>Crap Calculator</h1>
-	<div class="row">
-	  <div class="gutter">
-	    <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-	      <div class="row">Manure type</div>
-	      <select>
-		<option value="cattle">Cattle Slurry</option>
-		<option value="fym">Farmyard Manure</option>
-		<option value="pig">Pig Slurry</option>
-		<option value="poultry">Poultry Litter</option>
-	      </select>
+	<div class="col-xm-12 col-md-8 col-md-offset-2">
+	  
+	  <h1>Crap Calculator</h1>
+	  <div class="row">
+	    <div class="gutter">
+	      <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+		<div class="row">Manure type</div>
+		<select>
+		  <option value="cattle">Cattle Slurry</option>
+		  <option value="fym">Farmyard Manure</option>
+		  <option value="pig">Pig Slurry</option>
+		  <option value="poultry">Poultry Litter</option>
+		</select>
+	      </div>
 	    </div>
 	  </div>
-	</div>
 
-	<div class="row">
-	  <div class="gutter">
-	    <div class="col-xs-12 col-sm-6">
-	      <div class="row">Soil type</div>
-	      <select>
-		<option value="sandyshallow">Sandy/Shallow</option>
-		<option value="mediumheavy">Medium/Heavy</option>
-	      </select>
-	    </div>
-	    <div class="col-xs-12 col-sm-6">
-	      <div class="row">Crop type</div>
-	      <select>
-		<option value="normal">All crops</option>
-		<option value="grassland">Grassland/Winter oilseed rape</option>
-	      </select>
+	  <div class="row">
+	    <div class="gutter">
+	      <div class="col-xs-12 col-sm-6">
+		<div class="row">Soil type</div>
+		<select>
+		  <option value="sandyshallow">Sandy/Shallow</option>
+		  <option value="mediumheavy">Medium/Heavy</option>
+		</select>
+	      </div>
+	      <div class="col-xs-12 col-sm-6">
+		<div class="row">Crop type</div>
+		<select>
+		  <option value="normal">All crops</option>
+		  <option value="grassland">Grassland/Winter oilseed rape</option>
+		</select>
+	      </div>
 	    </div>
 	  </div>
-	</div>
 
-	<div class="row">
-	  <div class="gutter">
-	    <div class="col-xs-12 col-sm-6">
-	      <div class="row">Season</div>
-	      <select>
-		<option value="autumn">Autumn</option>
-		<option value="winter">Winter</option>
-		<option value="spring">Spring</option>
-		<option value="summer">Summer</option>
-	      </select>
+	  <div class="row">
+	    <div class="gutter">
+	      <div class="col-xs-12 col-sm-6">
+		<div class="row">Season</div>
+		<select>
+		  <option value="autumn">Autumn</option>
+		  <option value="winter">Winter</option>
+		  <option value="spring">Spring</option>
+		  <option value="summer">Summer</option>
+		</select>
+	      </div>
+	      <div class="col-xs-12 col-sm-6">
+		<div class="row">Quality</div>
+		<select>
+		  <option value="cattle">2% DM (Thin soup)</option>
+		  <option value="fym">6% DM (Thick soup)</option>
+		  <option value="pig">10% DM (Porridge)</option>
+		</select>
+	      </div>
 	    </div>
-	    <div class="col-xs-12 col-sm-6">
-	      <div class="row">Quality</div>
-	      <select>
-		<option value="cattle">2% DM (Thin soup)</option>
-		<option value="fym">6% DM (Thick soup)</option>
-		<option value="pig">10% DM (Porridge)</option>
-	      </select>
+	  </div>
+
+	  <div class="row">
+	    <div class="gutter">
+	      <div class="col-xs-10 col-xs-offset-1">
+		<input id="quantity" type="range"/>
+	      </div>
 	    </div>
 	  </div>
 	</div>
       </div>
-
     </body>
     <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="js/ditto.js"></script>
