--- a/index.html
+++ b/index.html
@@ -72,6 +72,44 @@
 	      </div>
 	    </div>
 	  </div>
+
+	  <div class="row">
+	    <div class="gutter">
+	      <div class="col-xs-12">
+		<h2>Crop Available</h2>
+	      </div>
+	      <div class="col-xs-4">
+		<h3 id="ntitle">N Kg/ha</h3>
+		<h3 id="nout">4.4</h3>
+	      </div>
+	      <div class="col-xs-4">
+		<h3 id="ptitle">P Kg/ha</h3>
+		<h3 id="pout">4.4</h3>
+	      </div>
+	      <div class="col-xs-4">
+		<h3 id="ktitle">K Kg/ha</h3>
+		<h3 id="kout">4.4</h3>
+	      </div>
+	    </div>
+	  </div>
+
+	  <div class="row">
+	    <div class="gutter">
+	      <div class="col-xs-12">
+		<h2>Fertiliser Savings</h2>
+	      </div>
+	      <div class="col-xs-4">
+		<h3 id="ncost">4.34</h3>
+	      </div>
+	      <div class="col-xs-4">
+		<h3 id="pcost">4.24</h3>
+	      </div>
+	      <div class="col-xs-4">
+		<h3 id="kcost">4.14</h3>
+	      </div>
+	    </div>
+	  </div>
+
 	</div>
       </div>
     </body>
