--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 		<input id="quantity" type="range"/>
 	      </div>
 	    </div>
+	    <h3 id="amount">50 m3/ha</h3>
 	  </div>
 
 	  <div class="row">
@@ -112,9 +113,12 @@
 
 	</div>
       </div>
+
+      <div id="output"></div>
     </body>
     <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="js/ditto.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/base.js"></script>
 
 </html>
