--- a/index.html
+++ b/index.html
@@ -5,20 +5,31 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <body onload="init(['scm/crap-app.jscm']);" bgcolor="#fff">
-      
+
       <div class="container">
 	<div class="col-xm-12 col-md-8 col-md-offset-2">
 	  
 	  <h1>Crap Calculator</h1>
 	  <div class="row">
 	    <div class="gutter">
-	      <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+	      <div class="col-xs-12 col-sm-6">
 		<div class="row">Manure type</div>
 		<select id="type">
+		  <option value="cattle">Cattle Slurry</option>
+		  <option value="fym">Farmyard Manure</option>
+		  <option value="pig">Pig Slurry</option>
+		  <option value="poultry">Poultry Litter</option>
+		  <option value="compost">Compost</option>
+		</select>
+	      </div>
+	      <div class="col-xs-12 col-sm-6">
+		<div class="row">Application</div>
+		<select id="application">
 		  <option value="cattle">Cattle Slurry</option>
 		  <option value="FYM">Farmyard Manure</option>
 		  <option value="pig">Pig Slurry</option>
 		  <option value="poultry">Poultry Litter</option>
+		  <option value="compost">Compost</option>
 		</select>
 	      </div>
 	    </div>
