--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
 	  <h1>Crap Calculator</h1>
 	  <div class="row">
 	    <div class="gutter">
+	      <div class="col-xs-12 col-sm-12">
+		<div class="row">Units</div>
+		<select id="units">
+		  <option value="metric">Metric</option>
+		  <option value="imperial">Imperial</option>
+		</select>
+	      </div>
+
 	      <div class="col-xs-12 col-sm-6">
-		<div class="row">Manure type</div>
+ 		<div class="row">Manure type</div>
 		<select id="type">
 		  <option value="cattle">Cattle Slurry</option>
 		  <option value="fym">Farmyard Manure</option>
@@ -84,7 +92,7 @@
 	    </div>
 	    <h3 id="amount">50 m3/ha</h3>
 	  </div>
-
+	  
 	  <div class="row">
 	    <div class="gutter">
 	      <div class="col-xs-12">
