--- a/index.html
+++ b/index.html
@@ -96,18 +96,18 @@
 	  <div class="row">
 	    <div class="gutter">
 	      <div class="col-xs-12">
-		<h2>Crop Available</h2>
+		Crop available nutrients (Total in manure)
 	      </div>
 	      <div class="col-xs-4">
-		<h3 id="ntitle">N Kg/ha</h3>
+		<span id="ntitle">N Kg/ha</span>
 		<h3 id="nout">4.4</h3>
 	      </div>
 	      <div class="col-xs-4">
-		<h3 id="ptitle">P Kg/ha</h3>
+		<span id="ptitle">P Kg/ha</span>
 		<h3 id="pout">4.4</h3>
 	      </div>
 	      <div class="col-xs-4">
-		<h3 id="ktitle">K Kg/ha</h3>
+		<span id="ktitle">K Kg/ha</span>
 		<h3 id="kout">4.4</h3>
 	      </div>
 	    </div>
@@ -116,7 +116,7 @@
 	  <div class="row">
 	    <div class="gutter">
 	      <div class="col-xs-12">
-		<h2>Fertiliser Savings</h2>
+		Fertiliser Savings
 	      </div>
 	      <div class="col-xs-4">
 		<h3 id="ncost">4.34</h3>
@@ -128,6 +128,10 @@
 		<h3 id="kcost">4.14</h3>
 	      </div>
 	    </div>
+	  </div>
+
+	  <div class="row">
+	    <center><img id="manure-image" src="images/cattle_25m3.jpg"></center>
 	  </div>
 
 	</div>
